# magic-comp-rules-zh-cn-agent

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  docker-compose.yml  docker-entrypoint.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_review_fixes.py
backend/app/: main.py  schemas.py
backend/app/agent/: judge_agent.py  schemas.py
backend/app/agent/prompts/: mtg_judge_zh.md
backend/app/api/: cards.py  health.py  judge.py  rules.py
backend/app/core/: auth.py  config.py  errors.py  logging.py  rate_limit.py  safety.py
backend/app/db/: models.py  session.py
backend/app/evals/: golden_cases.yaml  run_evals.py
backend/app/retrieval/: chunker.py  embeddings.py  hybrid_search.py  ingest_rules.py  query_expand.py  reranker.py  text_cleaner.py
backend/app/services/: card_service.py  judge_service.py  rule_service.py
backend/app/tools/: card_tools.py  rule_tools.py
backend/static/: index.html
backend/tests/: conftest.py  test_byok_security.py  test_card_tools.py  test_cards_resolve.py  test_chunker.py  test_health.py  test_hybrid_search.py  test_judge_agent_search.py  test_judge_ask.py  test_query_expand.py  test_reranker.py  test_rules_search.py  test_safety.py  test_security.py  test_stream.py  test_text_cleaner.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
skill/: SKILL.md
skill/article-translator/: .gitignore  README.md  mtg_translator.py
(+50 files in other folders)
